--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
 		"way/generators": "2.*",
 		"edvinaskrucas/notification": "3.*",
                 "barryvdh/laravel-debugbar": "1.7.*@dev",
-                "barryvdh/laravel-ide-helper": "1.11.*@dev"
+                "barryvdh/laravel-ide-helper": "1.11.*@dev",
+                "anahkiasen/former": "dev-master"
                
 	},
 	"autoload": {
